Updated footer on all pages, fixed alignment + responsiveness
Fixed alignment and responsiveness of header on the publications page. Updated the footer to it's final format.

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -385,21 +385,11 @@ img.howtoapply-image {
     font-weight: bold;
     color: #ffffff;
     background-color: #221EE0;
-    padding-top: 0.8em;
-    padding-bottom: 0.8em;
-    padding-right: 4em;
-    padding-left: 4em;
+    padding: 0.8em 2em 0.8em 2em;
     width: 290px;
-/*
-    padding-top: 1em;
-    padding-bottom: 1em;
-    padding-right: 2.5em;
-    padding-left: 2.5em;
-*/
     border: none;
     border-radius: 0.625em;
     box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.35);
-/*    margin-right: 1em;*/
 }
 
 .primary-button:hover {
@@ -415,15 +405,12 @@ img.howtoapply-image {
     font-weight: bold;
     color: #221EE0;
     background-color: #ffffff;
-    padding-top: 0.9em;
-    padding-bottom: 0.9em;
-    padding-right: 2.5em;
-    padding-left: 2.5em;
+    padding: 0.8em 2em 0.8em 2em;
     border: 0.125em solid #221EE0;
     border-radius: 0.625em;
     box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.35);
     margin-right: 1em;
-    width: 300px;
+    width: 290px;
 }
 
 .secondary-button:hover {
@@ -742,7 +729,7 @@ footer a:hover {
 }
 
 .footer-logo {
-    content: url(../IMG/SIAT-Logo-1-White.png);
+    content: url(../IMG/Logos/SIAT-Logo-1-White.png);
     width: 300px;
 }
 
@@ -922,18 +909,12 @@ section.members {
     top: 2em;
 }
 
+/* FIX PUBLICATION PAGE HEADER ALIGNMENT */
+.offset-md-2 {
+    margin-left: 2.5em;
+}
 
-/*.member-contact .tertiary-button-text {
-    font-size: 1em;
-}*/
 
-
-
-/*
-
-@media (max-width: 767px) {
-   SIDE BAR ALIGN ITEMS HORIZONTALLY + scroll members page + make sticky
-}*/
 
   @media (min-width: 768px) {
   .form-control {
@@ -1034,7 +1015,7 @@ section.members {
 /* FOOTER MEDIA QUERIES */
   @media (min-width: 300px) {
     .footer-logo {
-        content: url(../IMG/SIAT-Logo-2-White.png);
+        content: url(../IMG/Logos/SIAT-Logo-2-White.png);
         width: 200px;
         margin-bottom: 50px;
     }
@@ -1057,11 +1038,21 @@ section.members {
     footer .col-md-5 {
         width: 100%;
     }
+
+    .offset-md-2 {
+        margin-left: 0.5em;
+    }
+  }
+
+  @media (min-width: 700px) {
+    .offset-md-2 {
+        margin-left: 0.5em;
+    }
   }
 
   @media (min-width: 768px) {
     .footer-logo {
-        content: url(../IMG/SIAT-Logo-2-White.png);
+        content: url(../IMG/Logos/SIAT-Logo-2-White.png);
         width: 170px;
     }
 
@@ -1079,12 +1070,32 @@ section.members {
     .blog-post h5 {
         padding-top:0.4em;
     }
+
+    .offset-md-2 {
+        margin-left: 1.7em;
+    }
+  }
+
+  @media (min-width: 995px) {
+    .offset-md-2 {
+        margin-left: 2.2em;
+    }
+  }
+
+  @media (min-width: 1200px) {
+    .offset-md-2 {
+        margin-left: 2.5em;
+    }
   }
 
   @media (min-width: 1350px) {
     .footer-logo {
-        content: url(../IMG/SIAT-Logo-1-White.png);
+        content: url(../IMG/Logos/SIAT-Logo-1-White.png);
         width: 300px;
+    }
+
+    .offset-md-2 {
+        margin-left: 2.5em;
     }
   }
 
